funky/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    WHITESPACE

Grammar

Rule 0     S' -> MODULE_DEFINITION
Rule 1     MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY
Rule 2     BODY -> OPEN_BRACE IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
Rule 3     BODY -> OPEN_BRACE TOP_DECLARATIONS CLOSE_BRACE
Rule 4     IMPORT_DECLARATIONS -> IMPORT_DECLARATIONS ENDSTATEMENT IMPORT_DECLARATION
Rule 5     IMPORT_DECLARATIONS -> IMPORT_DECLARATION
Rule 6     IMPORT_DECLARATION -> IMPORT IDENTIFIER
Rule 7     TOP_DECLARATIONS -> TOP_DECLARATIONS ENDSTATEMENT TOP_DECLARATION
Rule 8     TOP_DECLARATIONS -> TOP_DECLARATION
Rule 9     TOP_DECLARATION -> NEWTYPE TYPENAME EQUALS TYPE
Rule 10    TOP_DECLARATION -> NEWCONS TYPENAME EQUALS CONSTRUCTORS
Rule 11    TOP_DECLARATION -> DECLARATION
Rule 12    CONSTRUCTORS -> CONSTRUCTORS PIPE CONSTRUCTOR
Rule 13    CONSTRUCTORS -> CONSTRUCTOR
Rule 14    CONSTRUCTOR -> TYPENAME ATYPES
Rule 15    DECLARATIONS -> OPEN_BRACE DECLARATIONS_LIST CLOSE_BRACE
Rule 16    DECLARATIONS -> OPEN_BRACE CLOSE_BRACE
Rule 17    DECLARATIONS_LIST -> DECLARATION ENDSTATEMENT DECLARATIONS_LIST
Rule 18    DECLARATIONS_LIST -> DECLARATION
Rule 19    DECLARATION -> GEN_DECLARATION
Rule 20    DECLARATION -> FUNCTION_LHS RHS
Rule 21    DECLARATION -> PAT RHS
Rule 22    GEN_DECLARATION -> IDENTIFIER TYPESIG TYPE
Rule 23    GEN_DECLARATION -> SETFIX ASSOCIATIVITY INTEGER OP
Rule 24    GEN_DECLARATION -> <empty>
Rule 25    ASSOCIATIVITY -> LEFTASSOC
Rule 26    ASSOCIATIVITY -> RIGHTASSOC
Rule 27    ASSOCIATIVITY -> NONASSOC
Rule 28    TYPE -> ATYPE
Rule 29    TYPE -> ATYPE ARROW TYPE
Rule 30    ATYPES -> ATYPES ATYPE
Rule 31    ATYPES -> <empty>
Rule 32    ATYPE -> TYPENAME
Rule 33    ATYPE -> OPEN_PAREN TYPES_LIST CLOSE_PAREN
Rule 34    ATYPE -> OPEN_PAREN TYPE CLOSE_PAREN
Rule 35    ATYPE -> OPEN_SQUARE TYPE CLOSE_SQUARE
Rule 36    FUNCTION_LHS -> IDENTIFIER APAT APATS
Rule 37    FUNCTION_LHS -> PAT VAROP PAT
Rule 38    FUNCTION_LHS -> OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
Rule 39    RHS -> EQUALS EXP
Rule 40    RHS -> EQUALS EXP WHERE DECLARATIONS
Rule 41    RHS -> GDRHS
Rule 42    RHS -> GDRHS WHERE DECLARATIONS
Rule 43    GDRHS -> GUARDS EQUALS EXP
Rule 44    GDRHS -> GUARDS EQUALS EXP GDRHS
Rule 45    GUARDS -> PIPE GUARD
Rule 46    GUARD -> INFIX_EXP
Rule 47    EXP -> INFIX_EXP
Rule 48    INFIX_EXP -> LEXP OP INFIX_EXP
Rule 49    INFIX_EXP -> MINUS INFIX_EXP
Rule 50    INFIX_EXP -> LEXP
Rule 51    LEXP -> LAMBDA APAT APATS ARROW EXP
Rule 52    LEXP -> LET DECLARATIONS IN EXP
Rule 53    LEXP -> IF EXP THEN EXP ELSE EXP
Rule 54    LEXP -> MATCH EXP OF OPEN_BRACE ALTS CLOSE_BRACE
Rule 55    LEXP -> FEXP
Rule 56    FEXP -> FEXP AEXP
Rule 57    FEXP -> AEXP
Rule 58    AEXP -> USED_VAR
Rule 59    AEXP -> GCON
Rule 60    AEXP -> LITERAL
Rule 61    AEXP -> OPEN_PAREN EXP CLOSE_PAREN
Rule 62    AEXP -> OPEN_PAREN EXP COMMA EXP_LIST CLOSE_PAREN
Rule 63    AEXP -> OPEN_SQUARE EXP CLOSE_SQUARE
Rule 64    AEXP -> OPEN_SQUARE EXP COMMA EXP_LIST CLOSE_SQUARE
Rule 65    ALTS -> ALT ENDSTATEMENT ALTS
Rule 66    ALTS -> ALT
Rule 67    ALT -> PAT ARROW EXP
Rule 68    ALT -> <empty>
Rule 69    PAT -> LPAT LIST_CONSTRUCTOR PAT
Rule 70    PAT -> LPAT
Rule 71    LPAT -> APAT
Rule 72    LPAT -> MINUS OPEN_PAREN INTEGER CLOSE_PAREN
Rule 73    LPAT -> MINUS OPEN_PAREN FLOAT CLOSE_PAREN
Rule 74    LPAT -> GCON APAT APATS
Rule 75    APAT -> PARAM
Rule 76    APAT -> GCON
Rule 77    APAT -> LITERAL
Rule 78    APAT -> OPEN_PAREN PAT CLOSE_PAREN
Rule 79    APAT -> OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
Rule 80    APAT -> OPEN_SQUARE PAT_LIST CLOSE_SQUARE
Rule 81    GCON -> OPEN_PAREN CLOSE_PAREN
Rule 82    GCON -> OPEN_SQUARE CLOSE_SQUARE
Rule 83    GCON -> TYPENAME
Rule 84    VAROP -> VARSYM
Rule 85    VAROP -> BACKTICK IDENTIFIER BACKTICK
Rule 86    OP -> VAROP
Rule 87    EXP_LIST -> EXP_LIST COMMA EXP
Rule 88    EXP_LIST -> EXP
Rule 89    APATS -> APAT APATS
Rule 90    APATS -> <empty>
Rule 91    PAT_LIST -> PAT_LIST COMMA PAT
Rule 92    PAT_LIST -> PAT
Rule 93    VARSYM -> PLUS
Rule 94    VARSYM -> MINUS
Rule 95    VARSYM -> TIMES
Rule 96    VARSYM -> DIVIDE
Rule 97    VARSYM -> POW
Rule 98    VARSYM -> EQUALITY
Rule 99    VARSYM -> INEQUALITY
Rule 100   VARSYM -> LESS
Rule 101   VARSYM -> LEQ
Rule 102   VARSYM -> GREATER
Rule 103   VARSYM -> GEQ
Rule 104   VARSYM -> LIST_CONSTRUCTOR
Rule 105   TYPES_LIST -> TYPES_LIST COMMA TYPE
Rule 106   TYPES_LIST -> TYPE
Rule 107   LITERAL -> FLOAT
Rule 108   LITERAL -> INTEGER
Rule 109   LITERAL -> BOOL
Rule 110   LITERAL -> CHAR
Rule 111   LITERAL -> STRING
Rule 112   USED_VAR -> IDENTIFIER
Rule 113   PARAM -> IDENTIFIER

Terminals, with rules where they appear

ARROW                : 29 51 67
AS                   : 
BACKTICK             : 85 85
BOOL                 : 109
CHAR                 : 110
CLOSE_BRACE          : 2 3 15 16 54
CLOSE_PAREN          : 33 34 38 61 62 72 73 78 79 81
CLOSE_SQUARE         : 35 63 64 80 82
COMMA                : 62 64 79 87 91 105
DIVIDE               : 96
ELSE                 : 53
ENDSTATEMENT         : 2 4 7 17 65
EQUALITY             : 98
EQUALS               : 9 10 39 40 43 44
FLOAT                : 73 107
GEQ                  : 103
GREATER              : 102
IDENTIFIER           : 1 6 22 36 85 112 113
IF                   : 53
IMPORT               : 6
IN                   : 52
INEQUALITY           : 99
INTEGER              : 23 72 108
LAMBDA               : 51
LEFTASSOC            : 25
LEQ                  : 101
LESS                 : 100
LET                  : 52
LIST_CONSTRUCTOR     : 69 104
MATCH                : 54
MINUS                : 49 72 73 94
MODULE               : 1
NEWCONS              : 10
NEWTYPE              : 9
NONASSOC             : 27
OF                   : 54
OPEN_BRACE           : 2 3 15 16 54
OPEN_PAREN           : 33 34 38 61 62 72 73 78 79 81
OPEN_SQUARE          : 35 63 64 80 82
PIPE                 : 12 45
PLUS                 : 93
POW                  : 97
RIGHTASSOC           : 26
SETFIX               : 23
STRING               : 111
THEN                 : 53
TIMES                : 95
TYPENAME             : 9 10 14 32 83
TYPESIG              : 22
WHERE                : 1 40 42
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

AEXP                 : 56 57
ALT                  : 65 66
ALTS                 : 54 65
APAT                 : 36 38 51 71 74 89
APATS                : 36 38 51 74 89
ASSOCIATIVITY        : 23
ATYPE                : 28 29 30
ATYPES               : 14 30
BODY                 : 1
CONSTRUCTOR          : 12 13
CONSTRUCTORS         : 10 12
DECLARATION          : 11 17 18
DECLARATIONS         : 40 42 52
DECLARATIONS_LIST    : 15 17
EXP                  : 39 40 43 44 51 52 53 53 53 54 61 62 63 64 67 87 88
EXP_LIST             : 62 64 87
FEXP                 : 55 56
FUNCTION_LHS         : 20 38
GCON                 : 59 74 76
GDRHS                : 41 42 44
GEN_DECLARATION      : 19
GUARD                : 45
GUARDS               : 43 44
IMPORT_DECLARATION   : 4 5
IMPORT_DECLARATIONS  : 2 4
INFIX_EXP            : 46 47 48 49
LEXP                 : 48 50
LITERAL              : 60 77
LPAT                 : 69 70
MODULE_DEFINITION    : 0
OP                   : 23 48
PARAM                : 75
PAT                  : 21 37 37 67 69 78 79 91 92
PAT_LIST             : 79 80 91
RHS                  : 20 21
TOP_DECLARATION      : 7 8
TOP_DECLARATIONS     : 2 3 7
TYPE                 : 9 22 29 34 35 105 106
TYPES_LIST           : 33 105
USED_VAR             : 58
VAROP                : 37 86
VARSYM               : 84

Parsing method: LALR

state 0

    (0) S' -> . MODULE_DEFINITION
    (1) MODULE_DEFINITION -> . MODULE IDENTIFIER WHERE BODY

    MODULE          shift and go to state 2

    MODULE_DEFINITION              shift and go to state 1

state 1

    (0) S' -> MODULE_DEFINITION .



state 2

    (1) MODULE_DEFINITION -> MODULE . IDENTIFIER WHERE BODY

    IDENTIFIER      shift and go to state 3


state 3

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER . WHERE BODY

    WHERE           shift and go to state 4


state 4

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER WHERE . BODY
    (2) BODY -> . OPEN_BRACE IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (3) BODY -> . OPEN_BRACE TOP_DECLARATIONS CLOSE_BRACE

    OPEN_BRACE      shift and go to state 6

    BODY                           shift and go to state 5

state 5

    (1) MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY .

    $end            reduce using rule 1 (MODULE_DEFINITION -> MODULE IDENTIFIER WHERE BODY .)


state 6

    (2) BODY -> OPEN_BRACE . IMPORT_DECLARATIONS ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (3) BODY -> OPEN_BRACE . TOP_DECLARATIONS CLOSE_BRACE
    (4) IMPORT_DECLARATIONS -> . IMPORT_DECLARATIONS ENDSTATEMENT IMPORT_DECLARATION
    (5) IMPORT_DECLARATIONS -> . IMPORT_DECLARATION
    (7) TOP_DECLARATIONS -> . TOP_DECLARATIONS ENDSTATEMENT TOP_DECLARATION
    (8) TOP_DECLARATIONS -> . TOP_DECLARATION
    (6) IMPORT_DECLARATION -> . IMPORT IDENTIFIER
    (9) TOP_DECLARATION -> . NEWTYPE TYPENAME EQUALS TYPE
    (10) TOP_DECLARATION -> . NEWCONS TYPENAME EQUALS CONSTRUCTORS
    (11) TOP_DECLARATION -> . DECLARATION
    (19) DECLARATION -> . GEN_DECLARATION
    (20) DECLARATION -> . FUNCTION_LHS RHS
    (21) DECLARATION -> . PAT RHS
    (22) GEN_DECLARATION -> . IDENTIFIER TYPESIG TYPE
    (23) GEN_DECLARATION -> . SETFIX ASSOCIATIVITY INTEGER OP
    (24) GEN_DECLARATION -> .
    (36) FUNCTION_LHS -> . IDENTIFIER APAT APATS
    (37) FUNCTION_LHS -> . PAT VAROP PAT
    (38) FUNCTION_LHS -> . OPEN_PAREN FUNCTION_LHS CLOSE_PAREN APAT APATS
    (69) PAT -> . LPAT LIST_CONSTRUCTOR PAT
    (70) PAT -> . LPAT
    (71) LPAT -> . APAT
    (72) LPAT -> . MINUS OPEN_PAREN INTEGER CLOSE_PAREN
    (73) LPAT -> . MINUS OPEN_PAREN FLOAT CLOSE_PAREN
    (74) LPAT -> . GCON APAT APATS
    (75) APAT -> . PARAM
    (76) APAT -> . GCON
    (77) APAT -> . LITERAL
    (78) APAT -> . OPEN_PAREN PAT CLOSE_PAREN
    (79) APAT -> . OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
    (80) APAT -> . OPEN_SQUARE PAT_LIST CLOSE_SQUARE
    (81) GCON -> . OPEN_PAREN CLOSE_PAREN
    (82) GCON -> . OPEN_SQUARE CLOSE_SQUARE
    (83) GCON -> . TYPENAME
    (113) PARAM -> . IDENTIFIER
    (107) LITERAL -> . FLOAT
    (108) LITERAL -> . INTEGER
    (109) LITERAL -> . BOOL
    (110) LITERAL -> . CHAR
    (111) LITERAL -> . STRING

    IMPORT          shift and go to state 11
    NEWTYPE         shift and go to state 13
    NEWCONS         shift and go to state 15
    IDENTIFIER      shift and go to state 12
    SETFIX          shift and go to state 20
    CLOSE_BRACE     reduce using rule 24 (GEN_DECLARATION -> .)
    ENDSTATEMENT    reduce using rule 24 (GEN_DECLARATION -> .)
    OPEN_PAREN      shift and go to state 23
    MINUS           shift and go to state 25
    OPEN_SQUARE     shift and go to state 30
    TYPENAME        shift and go to state 14
    FLOAT           shift and go to state 26
    INTEGER         shift and go to state 21
    BOOL            shift and go to state 31
    CHAR            shift and go to state 32
    STRING          shift and go to state 33

    IMPORT_DECLARATIONS            shift and go to state 7
    TOP_DECLARATIONS               shift and go to state 8
    IMPORT_DECLARATION             shift and go to state 9
    TOP_DECLARATION                shift and go to state 10
    DECLARATION                    shift and go to state 16
    GEN_DECLARATION                shift and go to state 17
    FUNCTION_LHS                   shift and go to state 18
    PAT                            shift and go to state 19
    APAT                           shift and go to state 22
    LPAT                           shift and go to state 24
    GCON                           shift and go to state 27
    PARAM                          shift and go to state 28
    LITERAL                        shift and go to state 29

state 7

    (2) BODY -> OPEN_BRACE IMPORT_DECLARATIONS . ENDSTATEMENT TOP_DECLARATIONS CLOSE_BRACE
    (4) IMPORT_DECLARATIONS -> IMPORT_DECLARATIONS . ENDSTATEMENT IMPORT_DECLARATION

    ENDSTATEMENT    shift and go to state 34


state 8

    (3) BODY -> OPEN_BRACE TOP_DECLARATIONS . CLOSE_BRACE
    (7) TOP_DECLARATIONS -> TOP_DECLARATIONS . ENDSTATEMENT TOP_DECLARATION

    CLOSE_BRACE     shift and go to state 35
    ENDSTATEMENT    shift and go to state 36


state 9

    (5) IMPORT_DECLARATIONS -> IMPORT_DECLARATION .

    ENDSTATEMENT    reduce using rule 5 (IMPORT_DECLARATIONS -> IMPORT_DECLARATION .)


state 10

    (8) TOP_DECLARATIONS -> TOP_DECLARATION .

    CLOSE_BRACE     reduce using rule 8 (TOP_DECLARATIONS -> TOP_DECLARATION .)
    ENDSTATEMENT    reduce using rule 8 (TOP_DECLARATIONS -> TOP_DECLARATION .)


state 11

    (6) IMPORT_DECLARATION -> IMPORT . IDENTIFIER

    IDENTIFIER      shift and go to state 37


state 12

    (22) GEN_DECLARATION -> IDENTIFIER . TYPESIG TYPE
    (36) FUNCTION_LHS -> IDENTIFIER . APAT APATS
    (113) PARAM -> IDENTIFIER .
    (75) APAT -> . PARAM
    (76) APAT -> . GCON
    (77) APAT -> . LITERAL
    (78) APAT -> . OPEN_PAREN PAT CLOSE_PAREN
    (79) APAT -> . OPEN_PAREN PAT COMMA PAT_LIST CLOSE_PAREN
    (80) APAT -> . OPEN_SQUARE PAT_LIST CLOSE_SQUARE
    (113) PARAM -> . IDENTIFIER
    (81) GCON -> . OPEN_PAREN CLOSE_PAREN
    (82) GCON -> . OPEN_SQUARE CLOSE_SQUARE
    (83) GCON -> . TYPENAME
    (107) LITERAL -> . FLOAT
    (108) LITERAL -> . INTEGER
    (109) LITERAL -> . BOOL
    (110) LITERAL -> . CHAR
    (111) LITERAL -> . STRING

    TYPESIG         shift and go to state 39
    LIST_CONSTRUCTOR reduce using rule 113 (PARAM -> IDENTIFIER .)
    EQUALS          reduce using rule 113 (PARAM -> IDENTIFIER .)
    BACKTICK        reduce using rule 113 (PARAM -> IDENTIFIER .)
    PLUS            reduce using rule 113 (PARAM -> IDENTIFIER .)
    MINUS           reduce using rule 113 (PARAM -> IDENTIFIER .)
    TIMES           reduce using rule 113 (PARAM -> IDENTIFIER .)
    DIVIDE          reduce using rule 113 (PARAM -> IDENTIFIER .)
    POW             reduce using rule 113 (PARAM -> IDENTIFIER .)
    EQUALITY        reduce using rule 113 (PARAM -> IDENTIFIER .)
    INEQUALITY      reduce using rule 113 (PARAM -> IDENTIFIER .)
    LESS            reduce using rule 113 (PARAM -> IDENTIFIER .)
    LEQ             reduce using rule 113 (PARAM -> IDENTIFIER .)
    GREATER         reduce using rule 113 (PARAM -> IDENTIFIER .)
    GEQ             reduce using rule 113 (PARAM -> IDENTIFIER .)
    PIPE            reduce using rule 113 (PARAM -> IDENTIFIER .)
    OPEN_PAREN      shift and go to state 42
    OPEN_SQUARE     shift and go to state 30
    IDENTIFIER      shift and go to state 38
    TYPENAME        shift and go to state 14
    FLOAT           shift and go to state 26
    INTEGER         shift and go to state 21
    BOOL            shift and go to state 31
    CHAR            shift and go to state 32
    STRING          shift and go to state 33

    APAT                           shift and go to state 40
    PARAM                          shift and go to state 28
    GCON                           shift and go to state 41
    LITERAL                        shift and go to state 29

state 13

    (9) TOP_DECLARATION -> NEWTYPE . TYPENAME EQUALS TYPE

    TYPENAME        shift and go to state 43


state 14

    (83) GCON -> TYPENAME .
